--- a/frontend/src/main/resources/templates/products/list.html
+++ b/frontend/src/main/resources/templates/products/list.html
@@ -15,6 +15,7 @@
 <!-- Bootstrap core CSS -->
 <link href="../static/css/bootstrap.css" rel="stylesheet"
 	th:href="@{/css/bootstrap.css}" />
+	
 </head>
 <body>
 	<table class="table table-dark">
@@ -31,10 +32,14 @@
 			</tr>
 			<tr th:each="product : ${products}">
 				<td scope="row"><span th:text="${product.name}"> Name </span></td>
-				<td scope="row"><span th:text="${product.quantityAvailable}"> Quantity Available </span></td>
-				<td scope="row"><span th:text="${product.quantityAvailableAtStore}"> Quantity Available At Store </span></td>
+				<td scope="row"><span th:text="${product.quantityAvailable}">
+						Quantity Available </span></td>
+				<td scope="row"><span
+					th:text="${product.quantityAvailableAtStore}"> Quantity
+						Available At Store </span></td>
 			</tr>
 		</tbody>
 	</table>
+	<a href="/products/add/page" class="btn btn-info" role="button">Aggiungi un prodotto</a>
 </body>
 </html>
